--- a/asuna_textures/mod.conf
+++ b/asuna_textures/mod.conf
@@ -1,4 +1,4 @@
 name = asuna_textures
 description = Textures overrides for Asuna
 author = EmptyStar
-depends = butterflies, everness, ethereal, farming, default
+depends = bottles, butterflies, everness, ethereal, farming, default
